<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_edit">Edit</string>
    <string name="action_archive">Archive</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_continue">Continue</string>

    <string name="notes_widget_display_name">Quick Notes</string>
    <string name="notes_widget_description">Take notes right from the home screen.</string>

    <string name="notes_widget_settings_title">Quick notes</string>
    <string name="notes_widget_settings_description">Customize the quick notes widget; notes backups</string>

    <string name="add_note_editor_text_hint">Add a quick note…</string>
    <string name="show_all_notes_button_label">Show all -></string>
    <string name="note_card_timestamp_placeholder">When this note is created on.</string>
    <string name="note_card_content_placeholder">Note content</string>
    <string name="note_card_reminder_icon">Icon for note reminder</string>
    <string name="all_notes_page_title">Notes</string>
    <string name="all_notes_add_note_label">Add note…</string>

    <string name="backup_file_prefix">StarlightLauncher_Notes_</string>

    <string name="settings_activity_title">Settings</string>
    <string name="pref_category_title_backup_and_restore">Backup and Restore</string>
    <string name="pref_title_export_to_json">Export to JSON</string>
    <string name="pref_summary_export_to_json">Export your notes to a JSON file.</string>
    <string name="pref_title_restore_from_backup">Restore from backup…</string>
    <string name="pref_summary_restore_from_backup">Restore notes from a JSON backup file.</string>
    <string name="export_dialog_title">Give the file a name</string>
    <string name="export_dialog_message">You can also use the default name: %1$s</string>
    <string name="export_dialog_file_name_edit_text_hint">Name</string>
    <string name="export_dialog_positive_label">Use my file name</string>
    <string name="export_dialog_negative_label">Use default name</string>
    <string name="export_dialog_empty_name_error">You need to give it a name.</string>
    <string name="restore_failed_dialog_title">Invalid backup file</string>
    <string name="restore_failed_dialog_message">The backup file selected is not in a correct format.</string>
    <string name="restore_failed_dialog_positive_btn_label">Select another file</string>
    <string name="restore_failed_dialog_negative_btn_label">Go back</string>
    <string name="restore_success_dialog_title">Notes restored</string>
    <string name="restore_success_dialog_message">Your backed up notes have been restored successfully.</string>
    <string name="backup_successful_message">Notes backed up successfully.</string>
    <string name="restore_successful_message">Notes restored successfully.</string>
</resources>